@@ -1,3 +1,4 @@
+* Remove ir.default
 * Add type, last user and last modification on ir.attachment
 * Rename datas into data on ir.attachment
 * Add new configuration option to prevent database listing
